# slime-mould-model

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml  firebase.json  main.py  publish_to_topic.py  pyproject.toml  slime_mould_model.py  slime_mould_model_2.py
.github/workflows/: ci.yml
docs/: Adaptimould.drawio
flow_control/: cloudbuild.yaml  main.py  requirements.txt  router_handler.py
gcp_cloud_run/: publish_cloud_events.py  run_metrics_processor.py  run_router.py  run_worker_a.py  run_worker_b.py  run_worker_c.py  run_workers.py
gcp_cloud_run/db/: firestore_utils.py
gcp_cloud_run/flow_control/: flow_control_utils.py  route_handler.py  run_router.py
gcp_cloud_run/metrics_processor/: metrics_utils.py
gcp_cloud_run/models/: crypto_data.py  models.py
gcp_cloud_run/workers/: run_workers.py  worker_a.py  worker_b.py  worker_base.py  worker_c.py
metrics_processor/: cloudbuild.yaml  main.py
models/: models.py
prototype/: publish_cloud_events.py  publish_test_messages.py  pubsub_test.py  slime_mould_model.py  slime_mould_model_2.py
slime_mould/: graph.py  model_functions.py  params.py  run_model.py  slime_mould_model.py
tests/: test_flow_control_utils.py  test_metrics_utils.py  test_model_functions.py  test_workers.py
ui/backend/: .env.example  main.py
utils/: firestore_utils.py  flow_control_utils.py  metrics_utils.py
worker_a/: cloudbuild.yaml  main.py
worker_b/: cloudbuild.yaml  main.py
worker_c/: cloudbuild.yaml  main.py  requirements.txt
workers/: worker_a.py  worker_b.py  worker_base.py  worker_c.py
(+19 files in other folders)
