[project]
name = "slime-mould-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "functions-framework>=3.10.1",
    "google-api-core>=2.30.0",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-logging>=3.14.0",
    "google-cloud-pubsub>=2.35.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "requests>=2.32.5",
]
